# PLC

./: CMakeLists.txt  README.md
include/: connection.h  mainWidget.h
src/: connection.cpp  main.cpp  mainWidget.cpp  test.cpp
